# steering_functions

./: 3rd-party-licenses.txt  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  package.xml  steering_functions-config.cmake  steering_functionsConfig.cmake
CC-Steer/: .dependencies.bak  Doxyfile  Makefile
CC-Steer/doxygen/html/: FLTK_Display.html  annotated.html  cc-dubins_8cc-source.html  cc-dubins_8cc.html  cc-dubins_8cc_2d01483e4c695b95880709a860991202_cgraph.md5  cc-dubins_8cc__incl.map  cc-dubins_8cc__incl.md5  cc-dubins_8h-source.html  cc-dubins_8h.html  cc-dubins_8h_2d01483e4c695b95880709a860991202_cgraph.map  cc-dubins_8h__dep__incl.map  cc-dubins_8h__dep__incl.md5  cc-dubins_8h__incl.map  cc-dubins_8h__incl.md5  cc-rs_8cc-source.html  cc-rs_8cc.html  cc-rs_8cc_0584d08aa3a5ff6c1f45c3ca73b7b1f3_cgraph.map  cc-rs_8cc_0584d08aa3a5ff6c1f45c3ca73b7b1f3_cgraph.md5  cc-rs_8cc_078c4463db6bf565ab90fb19f41b360b_cgraph.map  cc-rs_8cc_0cd277a955839de72f05598ad7e3be52_cgraph.map  cc-rs_8cc_0cd277a955839de72f05598ad7e3be52_cgraph.md5  cc-rs_8cc_1ad4ccfb5bb385819d398bdfbf1c9b4d_cgraph.map  cc-rs_8cc_1ad4ccfb5bb385819d398bdfbf1c9b4d_cgraph.md5  cc-rs_8cc_295b74939772441014c32b08e2501619_cgraph.map  cc-rs_8cc_295b74939772441014c32b08e2501619_cgraph.md5  cc-rs_8cc_2ef10cf40bdfd2171c42625d82079b45_cgraph.md5  cc-rs_8cc_36a02ef9612a7f5b35a847a45244ed41_cgraph.map  cc-rs_8cc_36a02ef9612a7f5b35a847a45244ed41_cgraph.md5  cc-rs_8cc_397faec4d8d559bfdbef8d48013e1ec0_cgraph.md5  cc-rs_8cc_3b6c2f30146a2a704c7a07d3aad69401_cgraph.map  cc-rs_8cc_3b6c2f30146a2a704c7a07d3aad69401_cgraph.md5  cc-rs_8cc_46bf7fea19757536e9347dd449b10ce2_cgraph.md5  cc-rs_8cc_4b1d92d3e6b6f610be558670f58a667c_cgraph.map  cc-rs_8cc_4b1d92d3e6b6f610be558670f58a667c_cgraph.md5  cc-rs_8cc_4c5a8a6aad7ff124300f64560189170e_cgraph.map  cc-rs_8cc_4c5a8a6aad7ff124300f64560189170e_cgraph.md5  cc-rs_8cc_4f0c8b1fccd9de3703b9c076f8557613_cgraph.map  cc-rs_8cc_4f0c8b1fccd9de3703b9c076f8557613_cgraph.md5  cc-rs_8cc_50cb32ff9d25acd255c5074dd49b6227_cgraph.map  cc-rs_8cc_50cb32ff9d25acd255c5074dd49b6227_cgraph.md5  (+295 more)
CC-Steer/main/: test.cc
CC-Steer/smt/: cc-dubins.cc  cc-dubins.h  cc-rs.cc  cc-rs.h  configuration.cc  configuration.h  graphicize.cc  graphicize.h  object.h  paths.cc  paths.h
CC-Steer/utilities/: fresnel.data  utilities.cc  utilities.h
config/: robot.yaml  steering_functions.rviz
include/steering_functions/: steering_functions.hpp
include/steering_functions/dubins_state_space/: dubins_state_space.hpp
include/steering_functions/filter/: ekf.hpp
include/steering_functions/hc_cc_state_space/: cc00_dubins_state_space.hpp  cc00_reeds_shepp_state_space.hpp  cc0pm_dubins_state_space.hpp  cc_dubins_state_space.hpp  cc_reeds_shepp_state_space.hpp  ccpm0_dubins_state_space.hpp  ccpmpm_dubins_state_space.hpp  configuration.hpp  fresnel.data  hc00_reeds_shepp_state_space.hpp  hc0pm_reeds_shepp_state_space.hpp  hc_cc_circle.hpp  hc_cc_state_space.hpp  hc_reeds_shepp_state_space.hpp  hcpm0_reeds_shepp_state_space.hpp  hcpmpm_reeds_shepp_state_space.hpp  paths.hpp  utilities.hpp
include/steering_functions/reeds_shepp_state_space/: reeds_shepp_state_space.hpp
include/steering_functions/utilities/: utilities.hpp
launch/: steering_functions.launch
ompl/: DubinsStateSpace.cpp  DubinsStateSpace.h  ReedsSheppStateSpace.cpp  ReedsSheppStateSpace.h
scripts/: plot_path_length_comparison.py  plot_states.py  plot_statistics.py
src/: steering_functions_node.cpp
src/dubins_state_space/: dubins_state_space.cpp
src/filter/: ekf.cpp
src/hc_cc_state_space/: cc00_dubins_state_space.cpp  cc00_reeds_shepp_state_space.cpp  cc0pm_dubins_state_space.cpp  cc_dubins_state_space.cpp  cc_reeds_shepp_state_space.cpp  ccpm0_dubins_state_space.cpp  ccpmpm_dubins_state_space.cpp  configuration.cpp  hc00_reeds_shepp_state_space.cpp  hc0pm_reeds_shepp_state_space.cpp  hc_cc_circle.cpp  hc_cc_state_space.cpp  hc_reeds_shepp_state_space.cpp  hcpm0_reeds_shepp_state_space.cpp  hcpmpm_reeds_shepp_state_space.cpp  paths.cpp  utilities.cpp
src/reeds_shepp_state_space/: reeds_shepp_state_space.cpp
src/utilities/: utilities.cpp
test/: fresnel_test.cpp  hc_cc_circle_test.cpp  jacobian_test.cpp  steering_functions_test.cpp  timing_test.cpp  utest.cpp
