<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steering_functions</name>
  <version>0.2.0</version>
  <description>The steering_functions package</description>

  <maintainer email="holger.banzhaf@de.bosch.com">Holger Banzhaf</maintainer>
  <author email="holger.banzhaf@de.bosch.com">Holger Banzhaf</author>

  <license>Apache-2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_ros</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">cmake_modules</build_depend>
  <depend condition="$ROS_VERSION == 1">costmap_2d</build_depend>
  <depend condition="$ROS_VERSION == 1">geometry_msgs</build_depend>
  <depend condition="$ROS_VERSION == 1">nav_msgs</build_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <depend condition="$ROS_VERSION == 1">roslib</build_depend>
  <depend condition="$ROS_VERSION == 1">tf</build_depend>
  <depend condition="$ROS_VERSION == 1">visualization_msgs</build_depend>
  <depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
