<?xml version="1.0"?>
<package format="3">
  <name>steering_functions</name>
  <version>0.3.0</version>
  <description>The steering_functions package</description>

  <maintainer email="holger.banzhaf@de.bosch.com">Holger Banzhaf</maintainer>
  <author email="holger.banzhaf@de.bosch.com">Holger Banzhaf</author>

  <license>Apache-2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <depend>eigen</depend>

  <depend condition="$ROS_VERSION == 1">costmap_2d</depend>
  <depend condition="$ROS_VERSION == 1">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 1">nav_msgs</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>
  <depend condition="$ROS_VERSION == 1">visualization_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">cmake</build_type>
  </export>
</package>
